--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,9 @@
+@import "~bootstrap";
+
 body {
-    background-color: lightgray;
+    background-color: white;
+}
+
+div {
+    text-align: center;
 }
